--- a/portfolio.html
+++ b/portfolio.html
@@ -18,16 +18,29 @@
 			</nav>
 		</div>
 	</header>
-	<div class="main">
+	<div class ="main">
 		<div id="container">
-			<h2>About Me</h2>
-			<img  id="photo" src="assets/images/yg.jpg" alt="Profile Picture">
-			<article>
-				<p>My name is Yelena Guliyeva, and I am from Azerbaijan.
-				I was born in Baku. Baku is the capital city of Azerbaijan. Azerbaijan is bounded by the Caspian Sea to the east, Russia to the north, Georgia to the northwest, Armenia to the west, and Iran to the south. I lived there for 35 years, during that time I graduated from school, went to college and worked.</p>
-				<p>I have a family. I met my husband at work. Soon our son was born, now he is 15 years old. I have been living with my family in the U.S. since 2011. When I moved in, we lived in the Bay Area in a city called Sunnyvale. However, we decided to move to Rocklin at around the beginning of 2017.</p>
-				<p>Some of my favorite hobbies are gardening, reading, and learning. I am very interested in learning about science and read about it a lot, as well as the news and politics overall. My dream is to have a house in Hawaii one day and live there for the rest of my life.</p>
-			</article>
+			<h2>Portfolio</h2>
+			<div class="port">
+				<img class="portimg" src="assets/images/technics-q-c-640-480-1.jpg" alt="Hangman">
+				<h4>Hangman</h4>
+			</div>
+			<div class="port">
+				<img class="portimg" src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+				<h4>RPG Game</h4>
+			</div>
+			<div class="port">
+				<img class="portimg" src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+				<h4>Trivia Game</h4>
+			</div>
+			<div class="port">
+				<img class="portimg" src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+				<h4>Rutgers Info Widget</h4>
+			</div>
+			<div class="port">
+				<img class="portimg" src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+				<h4>Rock Paper Scissors</h4>
+			</div>
 		</div>
 	</div>
 	<div class ="main">
