--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>About Yelena Guliyeva</title>
+	<title>Contact Yelena Guliyeva</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="icon" href="assets/images/favicon.ico" type="image/gif" sizes="16x16">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -18,16 +18,18 @@
 			</nav>
 		</div>
 	</header>
-	<div class="main">
+	<div class ="main">
 		<div id="container">
-			<h2>About Me</h2>
-			<img  id="photo" src="assets/images/yg.jpg" alt="Profile Picture">
-			<article>
-				<p>My name is Yelena Guliyeva, and I am from Azerbaijan.
-				I was born in Baku. Baku is the capital city of Azerbaijan. Azerbaijan is bounded by the Caspian Sea to the east, Russia to the north, Georgia to the northwest, Armenia to the west, and Iran to the south. I lived there for 35 years, during that time I graduated from school, went to college and worked.</p>
-				<p>I have a family. I met my husband at work. Soon our son was born, now he is 15 years old. I have been living with my family in the U.S. since 2011. When I moved in, we lived in the Bay Area in a city called Sunnyvale. However, we decided to move to Rocklin at around the beginning of 2017.</p>
-				<p>Some of my favorite hobbies are gardening, reading, and learning. I am very interested in learning about science and read about it a lot, as well as the news and politics overall. My dream is to have a house in Hawaii one day and live there for the rest of my life.</p>
-			</article>
+			<h2>Contact</h2>
+				<form>
+					<label for="name">Name</label><br>
+					<input id="name" type="text" name="name" placeholder="John Smith" required><br>
+					<label for="email">Email</label><br>
+					<input id="email" type="email" name="email" placeholder="example@gmail.com" required><br>
+					<label for="message">Message</label><br>
+					<textarea id="message" name="message" required=""></textarea><br>
+					<input type="submit" name="submit">
+				</form>
 		</div>
 	</div>
 	<div class ="main">
