--- a/portfolio.html
+++ b/portfolio.html
@@ -23,23 +23,34 @@
 			<h2>Portfolio</h2>
 			<div class="port">
 				<img class="portimg" src="assets/images/technics-q-c-640-480-1.jpg" alt="Hangman">
-				<h4>Hangman</h4>
+				<div class="linkport">
+				<a href="https://gulbadam.github.io/Hangman-Game/">Hangman</a>
+				</div>
 			</div>
 			<div class="port">
 				<img class="portimg" src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-				<h4>RPG Game</h4>
+				<div class="linkport">
+				<a href="#">RPG Game</a>
+				</div>
+				
 			</div>
 			<div class="port">
 				<img class="portimg" src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-				<h4>Trivia Game</h4>
+				<div class="linkport">
+				<a href="#">Trivia Game</a>
+				</div>
 			</div>
 			<div class="port">
 				<img class="portimg" src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-				<h4>Rutgers Info Widget</h4>
+				<div class="linkport">
+				<a href="#">Rutgers Info Widget</a>
+				</div>
 			</div>
 			<div class="port">
 				<img class="portimg" src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
-				<h4>Rock Paper Scissors</h4>
+				<div class="linkport">
+				<a href="#">Rock Paper Scissors</a>
+				</div>
 			</div>
 		</div>
 	</div>
