--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
 			<div class="port">
 				<img class="portimg" src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
 				<div class="linkport">
-				<a href="#">RPG Game</a>
+				<a href="https://gulbadam.github.io/week-4-game/">RPG Game</a>
 				</div>
 				
 			</div>
