--- a/portfolio.html
+++ b/portfolio.html
@@ -1,69 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>About Yelena Guliyeva</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-	<link rel="icon" href="assets/images/favicon.ico" type="image/gif" sizes="16x16">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <meta charset="UTF-8">
+    <title>About Yelena Guliyeva</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/gif" sizes="16x16">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
-	<header>
-		<div class="main">
-			<h1>Yelena Guliyeva</h1>
-			<nav>
-				<a href="index.html">About</a>
-				<a href="portfolio.html">Portfolio</a>
-				<a href="contact.html">Contact</a>
-			</nav>
-		</div>
-	</header>
-	<div class ="main">
-		<div id="container">
-			<h2>Portfolio</h2>
-			<div class="port">
-				<img class="portimg" src="assets/images/technics-q-c-640-480-1.jpg" alt="Hangman">
-				<div class="linkport">
-				<a href="https://gulbadam.github.io/Hangman-Game/">Hangman</a>
-				</div>
-			</div>
-			<div class="port">
-				<img class="portimg" src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-				<div class="linkport">
-				<a href="https://gulbadam.github.io/week-4-game/">RPG Game</a>
-				</div>
-				
-			</div>
-			<div class="port">
-				<img class="portimg" src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-				<div class="linkport">
-				<a href="#">Trivia Game</a>
-				</div>
-			</div>
-			<div class="port">
-				<img class="portimg" src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-				<div class="linkport">
-				<a href="#">Rutgers Info Widget</a>
-				</div>
-			</div>
-			<div class="port">
-				<img class="portimg" src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
-				<div class="linkport">
-				<a href="#">Rock Paper Scissors</a>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class ="main">
-		<div id="contact"> 
-			<h3>Connect with Me</h3>
-			<a href="https://github.com/gulbadam" target="_blank"><img class="icon" src="assets/images/ico_github.png" alt="GitHub"></a>
-			<a href="https://www.linkedin.com/in/yelena-guliyeva-ab095317/" target="_blank"><img class="icon" id="centericon" src="assets/images/ico_linkedin.png" alt="Linkedin"></a>
-			<a  href="https://stackoverflow.com/users/5792630/gulbadam" target="_blank"><img  class="icon" src="assets/images/ico_overflow.png"  alt="Stackoverflow"></a>
-		</div>
-	</div>
-	<footer>
-		<p>&copy; Copyright 2017 Yelena Guliyeva</p>
-	</footer>
+    <header>
+        <div class="main">
+            <h1>Yelena Guliyeva</h1>
+            <nav>
+                <a href="index.html">About</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </div>
+    </header>
+    <div class="main">
+        <div id="container">
+            <h2>Portfolio</h2>
+            <div class="port">
+                <img class="portimg" src="assets/images/technics-q-c-640-480-1.jpg" alt="Hangman">
+                <div class="linkport">
+                    <a href="https://gulbadam.github.io/Hangman-Game/">Hangman</a>
+                </div>
+            </div>
+            <div class="port">
+                <img class="portimg" src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+                <div class="linkport">
+                    <a href="https://gulbadam.github.io/week-4-game/">RPG Game</a>
+                </div>
+
+            </div>
+            <div class="port">
+                <img class="portimg" src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+                <div class="linkport">
+                    <a href="https://gulbadam.github.io/TriviaGame/">Trivia Game</a>
+                </div>
+            </div>
+            <div class="port">
+                <img class="portimg" src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+                <div class="linkport">
+                    <a href="#">Rutgers Info Widget</a>
+                </div>
+            </div>
+            <div class="port">
+                <img class="portimg" src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+                <div class="linkport">
+                    <a href="#">Rock Paper Scissors</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="main">
+        <div id="contact">
+            <h3>Connect with Me</h3>
+            <a href="https://github.com/gulbadam" target="_blank"><img class="icon" src="assets/images/ico_github.png" alt="GitHub"></a>
+            <a href="https://www.linkedin.com/in/yelena-guliyeva-ab095317/" target="_blank"><img class="icon" id="centericon" src="assets/images/ico_linkedin.png" alt="Linkedin"></a>
+            <a href="https://stackoverflow.com/users/5792630/gulbadam" target="_blank"><img class="icon" src="assets/images/ico_overflow.png" alt="Stackoverflow"></a>
+        </div>
+    </div>
+    <footer>
+        <p>&copy; Copyright 2017 Yelena Guliyeva</p>
+    </footer>
 </body>
+
 </html>
