--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
             <div class="port">
                 <img class="portimg" src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
                 <div class="linkport">
-                    <a href="#">Rutgers Info Widget</a>
+                    <a href="https://gulbadam.github.io/GifTastic/">Rutgers Info Widget</a>
                 </div>
             </div>
             <div class="port">
